Modify model name and add version pkg (#5)
* support  version and update routers

* modify model name

* add some unit test
