# docs/swagger.yaml
@@ -20,6 +20,8 @@ definitions:
         type: integer
       updateAt:
         type: string
+      url:
+        type: string
       userId:
         type: integer
     type: object
@@ -122,6 +124,21 @@ definitions:
       token:
         type: string
     type: object
+  model.Policy:
+    properties:
+      action:
+        type: string
+      oldPolicy:
+        items:
+          type: string
+        type: array
+      policy:
+        items:
+          type: string
+        type: array
+      type:
+        type: string
+    type: object
   model.UpdatedUser:
     properties:
       authInfos:
@@ -158,6 +175,15 @@ definitions:
       updateAt:
         type: string
     type: object
+  model.UserRole:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      role:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -168,18 +194,6 @@ info:
   title: Weave Server API
   version: "2.0"
 paths:
-  /:
-    get:
-      produces:
-      - text/html
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: Index
-      tags:
-      - index
   /api/v1/auth/token:
     delete:
       description: User logout
@@ -619,7 +633,17 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/model.UserRole'
+      - description: user name
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: user role
+        in: query
+        name: name
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -665,7 +689,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/model.UserRole'
       produces:
       - application/json
       responses:
@@ -678,6 +702,56 @@ paths:
       summary: Add user
       tags:
       - group
+  /api/v1/policies:
+    get:
+      description: List rbac policy
+      parameters:
+      - description: 'ptype: p/g/g2'
+        in: query
+        name: ptype
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  items:
+                    type: string
+                  type: array
+              type: object
+      security:
+      - JWT: []
+      summary: List rbac policy
+      tags:
+      - rbac
+    post:
+      consumes:
+      - application/json
+      description: Handle rbac policy and storage
+      parameters:
+      - description: rbac policy info
+        in: body
+        name: policy
+        required: true
+        schema:
+          $ref: '#/definitions/model.Policy'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.Response'
+      security:
+      - JWT: []
+      summary: Handle rbac policy
+      tags:
+      - rbac
   /api/v1/users:
     get:
       description: List user and storage
@@ -808,7 +882,7 @@ paths:
       tags:
       - user
   /api/v1/users/{id}/groups:
-    post:
+    get:
       description: Get groups
       parameters:
       - description: user id
@@ -828,18 +902,14 @@ paths:
       summary: Get groups
       tags:
       - group
-  /healthz:
+  /index:
     get:
       produces:
-      - application/json
-      responses:
-        "200":
-          description: ok
-          schema:
-            type: string
-      summary: Healthz
+      - text/html
+      responses: {}
+      summary: Home
       tags:
-      - healthz
+      - home
 securityDefinitions:
   JWT:
     in: header
